# arkspace

./: .gitignore  .pre-commit-config.yaml  AI-CONTEXT.md  ARCHITECTURE.md  BRAND.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  GLOSSARY.md  INTEGRATIONS.md  LICENSE  QUICK-START.md  README.md  README_AR.md  SCENARIOS.md  SECURITY.md  conftest.py  license.txt  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  linters.yml  release.yml
arkspace/: __init__.py  api.py  caps_integration_pack.json  demo.py  exceptions.py  gate.py  hooks.py  install.py  modules.txt  patches.txt  permissions.py  seed.py  seed_arkspace.py  setup.py  setup_wizard.py  tasks.py
docs/: ADMIN_GUIDE.md  AI_CONTEXT.md  AI_PROMPT.md  API_REFERENCE.md  ARCHITECTURE.md  CODE_REVIEW.md  COMPETITIVE_ANALYSIS.md  CONTEXT.md  DEVELOPER_GUIDE.md  DEVELOPMENT_SESSION_SUMMARY.md  DOCTYPES_REFERENCE.md  FAQ.md  FEATURES_AR.md  FEATURES_EN.md  INTEGRATIONS.md  MARKETPLACE_LISTING.md  PAGES_REFERENCE.md  PERSONAS.md  QUALITY_ASSURANCE.md  README.md  ROADMAP.md  SALES_PITCH.md  SALES_PLAYBOOK.md  SECURITY.md  SESSION_LOG.md  TECHNICAL_IMPLEMENTATION.md  TECHNICAL_SPECS.md  TRAINING.md  TROUBLESHOOTING.md  USER_GUIDE.md  _ANALYSIS_REPORT.md
marketplace/: listing.json
scripts/: seed_arkspace.py
wiki/: API-Reference.md  Architecture.md  Deployment.md  DocTypes-Reference.md  FAQ.md  Getting-Started.md  Home.md  Permissions.md  Translation-Guide.md
(+411 files in other folders)
